--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="sass/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+        <script src="js/script.js"></script>
         
         <title>Kamil Tomala</title>
     </head>
