--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
         </header>
 
         <main>
-            <section id="start" class="section-start">
-                Start
+            <section id="start" class="section-start section-all">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/Wavez.mp4" type="video/mp4">
+                        <source src="img/Wavez.webm" type="video/webm">
+                            Twoja przeglądarka nie obsługuje wideo w tle!
+                    </video>
+                </div>
+                START
             </section>
 
-            <section id="about" class="section-about">
+            <section id="about" class="section-about section-all">
                 About
             </section>
 
-            <section id="portfolio" class="section-portfolio">
+            <section id="portfolio" class="section-portfolio section-all">
                 Portfolio
             </section>
 
-            <section id="contact" class="section-contact">
+            <section id="contact" class="section-contact section-all">
                 Kontakt
             </section>
 
