Add jQuery and Parallax.js script

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <link rel="stylesheet" href="sass/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-        <script src="js/script.js"></script>
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
+
         <title>Kamil Tomala</title>
     </head>
     <body>
@@ -40,8 +41,8 @@
             <section id="home" class="section-home">
 
                <!-- Tekst na ekranie powitalnym -->
-            <div class="text-box">
-                <h1 class="heading-primary">
+            <div class="parallax-window" data-parallax="scroll" data-image-src="/img/josh-spires-734341-unsplash.jpg">
+                <h1 class="text-box heading-primary">
                     <span class="heading-primary--main">Witaj</span>
                     <span class="heading-primary--sub">na mojej stronie</span>
                 </h1>
