CSS - Add separates

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
 
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="sass/main.css">
@@ -17,12 +16,13 @@
         <title>Kamil Tomala</title>
     </head>
     <body>
+        <div class="separates"></div>
         <!-- Nagłówek strony -->
         <header id="start" class="header">
             <!-- Logo w lewym górym rogu -->
             <div class="header__logo-box">
                 <img src="img/logo-white.png" alt="Logo" class="header__logo">
-                {LOGO} Kamil Tomala
+                {Tymczasowe logo} Kamil Tomala
             </div>
             
             <!-- Nawigacja po stronie -->
@@ -41,7 +41,7 @@
             <section id="home" class="section-home">
 
                <!-- Tekst na ekranie powitalnym -->
-            <div class="parallax-window" data-parallax="scroll" data-image-src="/img/josh-spires-734341-unsplash.jpg">
+            <div class="parallax-window" data-parallax="scroll" data-speed=".3" data-image-src="/img/josh-spires-734341-unsplash.jpg">
                 <h1 class="text-box heading-primary">
                     <span class="heading-primary--main">Witaj</span>
                     <span class="heading-primary--sub">na mojej stronie</span>
@@ -50,13 +50,19 @@
 
             </section>
 
+            <div class="separates"></div>
+
             <section id="about" class="section-about">
                 About
             </section>
 
+            <div class="separates"></div>
+
             <section id="portfolio" class="section-portfolio">
                 Portfolio
             </section>
+
+            <div class="separates"></div>
 
             <section id="contact" class="section-contact">
                 Kontakt
