CSS - Added photos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
         <title>Kamil Tomala</title>
     </head>
+
     <body>
+
         <div class="separates"></div>
         <!-- Nagłówek strony -->
         <header id="start" class="header">
@@ -41,7 +43,7 @@
             <section id="home" class="section-home">
 
                <!-- Tekst na ekranie powitalnym -->
-            <div class="parallax-window" data-parallax="scroll" data-speed=".3" data-image-src="/img/josh-spires-734341-unsplash.jpg">
+            <div class="parallax-window" data-parallax="scroll" data-speed=".3" data-image-src="/img/chuttersnap-684565-unsplash.jpg">
                 <h1 class="text-box heading-primary">
                     <span class="heading-primary--main">Witaj</span>
                     <span class="heading-primary--sub">na mojej stronie</span>
@@ -53,19 +55,31 @@
             <div class="separates"></div>
 
             <section id="about" class="section-about">
-                About
+                <div class="parallax-window-white"  data-parallax="scroll" data-speed=".4" data-image-src="/img/jj-ying-236821-unsplash.jpg">
+                    <div class="about-card">
+                        <p class="test">AAA</p>
+                    </div>
+                </div>
             </section>
 
             <div class="separates"></div>
 
             <section id="portfolio" class="section-portfolio">
-                Portfolio
+                    <div class="parallax-window-purple"  data-parallax="scroll" data-speed=".4" data-image-src="/img/callum-wale-325611-unsplash.jpg">
+                        <div class="about-card">
+                            <p class="test">Portfolio</p>
+                        </div>
+                    </div>
             </section>
 
             <div class="separates"></div>
 
             <section id="contact" class="section-contact">
-                Kontakt
+                    <div class="parallax-window-gray"  data-parallax="scroll" data-speed=".4" data-image-src="/img/aron-van-de-pol-115112-unsplash.jpg">
+                        <div class="about-card">
+                            <p class="test">AAA</p>
+                        </div>
+                    </div>
             </section>
 
         </main>
