--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </head>
     <body>
 
-        <header>
-                <div class="header-logo">logo</div>
+        <header id="start">
+                <div class="header-logo">KT</div>
 
                 <nav class="navbar">
                     <ul class="navbar-contener">
@@ -55,19 +55,45 @@
 
         <main>
             <section id="about" class="section-about">
-                <p>about</p>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Poznajmy się</h2>
+                </div>
+
+                <div class="section-about_photo">
+                    <img src="/picture/about.jpg" alt="Kamil Tomala Photo">
+                </div>
+                <div class="section-about_text">
+                    <p>Lorem ipsum dolor sit amet libero auctor varius, scelerisque pede id mauris et rhoncus interdum, lacus. Maecenas ante. Donec sit amet, consectetuer tincidunt nec, scelerisque ligula, egestas ipsum dolor nonummy consequat. Morbi quis ante. Maecenas blandit velit wisi, id leo ac quam fermentum risus. Aliquam vitae justo. Donec vitae mauris. Fusce aliquet at, justo. Fusce tellus. Curabitur fringilla aliquet. In ornare vel, velit. Nunc id eleifend vitae, rutrum laoreet. Nam quis lectus blandit risus neque vel massa. Nulla ante. Phasellus pulvinar interdum. Proin quis lacus tellus augue, sagittis nec, iaculis malesuada congue. Nam nec tincidunt vehicula, feugiat ac, vehicula lectus. Curabitur feugiat dui, porta tincidunt.</p>
+                </div>
             </section>
 
             <section id="portfolio" class="section-portfolio">
-                <p>portfolio</p>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Portfolio</h2>
+                </div>
+                
+                <div class="section-portfolio--box">
+                    <a href="http://www.paula-duet.c0.pl/">
+                        <img src="/picture/ppdute.PNG" alt="P&P Duet">
+                    </a>
+                </div>
+
             </section>
 
             <section id="cv" class="section-cv">
-                <p>cv</p>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">CV</h2>
+                </div>
             </section>
 
             <section id="contact" class="contact">
-                <p>contact</p>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Kontakt</h2>
+                </div>
+
             </section>
         </main>
         
