--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div class="start-logo">logo</div>
                     <h1>Kamil Tomala</h1>
                     <p>Web Developer</p>        
-                    <a class="btn btn-circle" href="#about">
-                        <i class="fas fa-arrow-down btn-animated"></i>
+                    <a class="btn btn-about" href="#about">
+                        <i class="fas fa-arrow-down arrow-animated"></i>
                     </a>
             
                 </div>
