Add flex to section start + add neon light

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
         <link rel="stylesheet" href="css/icon-font.css">
@@ -49,10 +50,8 @@
 
                     <div class="start-logo">logo</div>
                     <h1>Kamil Tomala</h1>
-                    <p>Web Developer</p>        
-                    <a class="btn btn-about" href="#about">
-                        <i class="fas fa-arrow-down arrow-animated"></i>
-                    </a>
+                    <span class="neon1">W</span><span class="neon2">eb Developer</span>        
+                    <a class="btn btn-about" href="#about"><i class="fas fa-arrow-down arrow-animated"></i></a>
             
                 </div>
 
