Zmiana efektów po najechaniu na certyfikat; hover i ikona pod certyfikatem

--- a/index.html
+++ b/index.html
@@ -101,14 +101,29 @@
 
                     <div class="section-certyfikaty-flex">                    
                     
-                        <div class="section-certyfikaty--box">
-                            <img src="/picture/ResponsiveWebDesign.PNG" alt="FreeCodeCamp Certification">
-                            <i class="fas fa-search"></i>
+                        <div id=home class="section-certyfikaty-flex--box column">
+                            <div class="shine">
+                                <figure class="shine-figure">
+                                    <img class="image" src="/picture/ResponsiveWebDesign.PNG" alt="FreeCodeCamp Certification">
+                                </figure>
+                                <span class="image-text"><i class="fas fa-search i-color"></i></span>
+                            </div>
                         </div>
 
-                        <div class="section-certyfikaty--box">
-                            <img src="/picture/understanding_typescript2.jpg" alt="FreeCodeCamp Certification">
-                            <i class="fas fa-search"></i>
+                        <div id="popup1" class="overlay">
+                            <div class="popup">
+                                <a class="close" href="#home">&times;</a>
+                                <img src="/picture/ResponsiveWebDesign.PNG" alt="FreeCodeCamp Certification" class="popup-img">
+                            </div>
+                        </div>
+
+                        <div class="section-certyfikaty-flex--box column">
+                            <div class="shine">
+                                <figure class="shine-figure">
+                                    <img class="image" src="/picture/understanding_typescript2.jpg" alt="FreeCodeCamp Certification">    
+                                </figure>
+                                <span class="image-text"><i class="fas fa-search i-color"></i></span>
+                            </div>
                         </div>
 
                     </div>
