--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                         <div class="lightbox-target" id="popup1">
                             <img src="/picture/ResponsiveWebDesign.PNG" alt="FreeCodeCamp Certification">
-                            <a class="lightbox-close" href="#home"></a>
+                            <a class="lightbox-close" href="#certyfikaty"></a>
                         </div>
 
                         <div id=home class="section-certyfikaty-flex--box column">
@@ -120,7 +120,7 @@
     
                             <div class="lightbox-target" id="popup2">
                                 <img src="/picture/understanding_typescript2.jpg" alt="Udemy TypeScript">
-                                <a class="lightbox-close" href="#home"></a>
+                                <a class="lightbox-close" href="#certyfikaty"></a>
                             </div>
 
                         
