Zakończenie prac nad certyfikatami

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                             <a class="lightbox" href="#popup1">
                                 <img src="/picture/ResponsiveWebDesign.PNG"/>
                             </a> 
+                            <span class="loop-icon fa fa-search"></span>
                         </div>
 
                         <div class="lightbox-target" id="popup1">
@@ -116,12 +117,13 @@
                                 <a class="lightbox" href="#popup2">
                                     <img src="/picture/understanding_typescript2.jpg"/>
                                 </a> 
-                            </div>
-    
-                            <div class="lightbox-target" id="popup2">
-                                <img src="/picture/understanding_typescript2.jpg" alt="Udemy TypeScript">
-                                <a class="lightbox-close" href="#certyfikaty"></a>
-                            </div>
+                                <span class="loop-icon fa fa-search"></span>
+                        </div>
+
+                        <div class="lightbox-target" id="popup2">
+                            <img src="/picture/understanding_typescript2.jpg" alt="Udemy TypeScript">
+                            <a class="lightbox-close" href="#certyfikaty"></a>
+                        </div>
 
                         
 
