Dodanie hexagonu do sekcji kontakt

--- a/index.html
+++ b/index.html
@@ -143,33 +143,37 @@
 
                     <div class="section-cv-box">
 
-                        <!-- <div class="col-1-of-2">
-                            <div class="section-cv u-margin-top-big">
-                                <p class="cv-cat">wykształcenie</p>
-                            </div> 
-                        </div>
                         
-                        <div class="col-1-of-2">
-                            <div class="section-cv u-margin-top-big">
-                                <ul>
-                                    <li class="u-list-style-none">
-                                        <p class="cv-cat--2">2007 - ......... - Wyższa Szkoła Technologii Informatycznych w Warszawie</p>
-                                        <p class="cv-cat--2">2002 - 2006 - Technikum Elektroniczne nr. 12 z Zespole Szkół im. Olimpijczyków Polskich</p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                         -->
                     </div>
                 </div>
 
             </section>
 
-            <section id="contact" class="contact">
+            <section id="contact" class="section-contact">
 
                 <div class="u-center-text u-margin-bottom-big u-padding-top-big">
                     <h2 class="heading-secondary">Kontakt</h2>
                 </div>
+
+                <div class="honeycomb">
+
+                    <div class="ibws-fix">
+
+                      <div class="hexagon">
+                        <div class="hexagontent">Logo 1</div>
+                      </div>
+
+                      <div class="hexagon">
+                        <div class="hexagontent">Logo 2</div>
+                      </div>
+
+                      <div class="hexagon">
+                        <div class="hexagontent">Logo 3</div>
+                     </div>
+
+                    </div>
+                </div>
+                
 
             </section>
         </main>
