Podlinkowanie stron w sekcji kontakt

--- a/index.html
+++ b/index.html
@@ -159,17 +159,23 @@
 
                     <div class="ibws-fix">
 
-                      <div class="hexagon">
-                        <div class="hexagontent">Logo 1</div>
-                      </div>
+                      
+                    <a class="hexagon" href="https://github.com/kato86" target="_blank">
+                        <div class="hexagontent"><i class="fab fa-github"></i></div>                        
+                    </a>
+                    
 
-                      <div class="hexagon">
-                        <div class="hexagontent">Logo 2</div>
-                      </div>
+                    <a class="hexagon" href="https://twitter.com/ka_to_86?lang=pl" target="_blank">                        
+                        <div class="hexagontent"><i class="fab fa-twitter"></i></div>                        
+                    </a>
 
-                      <div class="hexagon">
-                        <div class="hexagontent">Logo 3</div>
-                     </div>
+                      <a class="hexagon" href="https://codepen.io/kato86/#" target="_blank">
+                        <div class="hexagontent"><i class="fab fa-codepen"></i></div>
+                     </a>
+
+                     <a class="hexagon" href="https://www.freecodecamp.org/kamil" target="_blank">
+                        <div class="hexagontent"><i class="fab fa-free-code-camp"></i></div>
+                     </a>
 
                     </div>
                 </div>
