Dodanie bg-color do nagłówków kategorii głównych

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
 
             <section id="about" class="section-about">
 
-                <div class="u-center-text u-margin-bottom-big u-padding-top-big">
-                    <h2 class="heading-secondary">Poznajmy się</h2>
+                <div class="u-center-text u-margin-bottom-big padding-top-big">
+                    <div class="bg-color">
+                        <h2 class="heading-secondary">Poznajmy się</h2>
+                    </div>
                 </div>
 
                 <div class="row">
@@ -95,8 +97,10 @@
 
                 <div class="row">
 
-                    <div class="u-center-text u-margin-bottom-big u-padding-top-big">
-                        <h2 class="heading-secondary">Certyfikaty</h2>
+                    <div class="u-center-text u-margin-bottom-big padding-top-big">
+                        <div class="bg-color">
+                            <h2 class="heading-secondary">Certyfikaty</h2>
+                        </div>
                     </div> 
 
                     <div class="section-certyfikaty-flex">                    
@@ -137,8 +141,10 @@
 
                 <div class="row">
 
-                    <div class="u-center-text u-margin-bottom-big u-padding-top-big">
-                        <h2 class="heading-secondary">CV</h2>
+                    <div class="u-center-text u-margin-bottom-big padding-top-big">
+                        <div class="bg-color">
+                            <h2 class="heading-secondary">CV</h2>
+                        </div>
                     </div>
 
                     <div class="section-cv-box">
@@ -151,8 +157,16 @@
 
             <section id="contact" class="section-contact">
 
-                <div class="u-center-text u-margin-bottom-big u-padding-top-big">
-                    <h2 class="heading-secondary">Kontakt</h2>
+                <div class="u-center-text u-margin-bottom-big padding-top-big">
+                    <div class="bg-color">
+                        <h2 class="heading-secondary">Kontakt</h2>
+                    </div>
+                </div>
+
+                <div class="contact-text">
+                    <span>Masz pytania?</span>
+                    <p>Napisz do mnie</p>
+                    <span>tomala.kamil@gmail.com</span>
                 </div>
 
                 <div class="honeycomb">
