--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
 
         <header class="header">
-                <div class="header-logo">KT</div>
+                <div class="header-logo"><img src="./icon/logo_white.png" alt=""></div>
 
                 <nav class="navbar">
                     <ul class="navbar-contener">
@@ -51,7 +51,7 @@
 
                 <div class="welcome-text">
 
-                    <div class="logo">logo</div>
+                    <div class="logo"><img src="./icon/logo_white.png" alt=""></div>
                     <h1>Kamil Tomala</h1>
                     <span class="neon1">W</span><span class="neon2">eb Developer</span>        
                     
