Dodanie canvas jako bacground (gwiazdy)

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 
         </header>
 
+        <canvas id="bgCanvas"></canvas>
+        
         <main>
             <section id="start" class="section-start">
                 <!-- <a class="anchor" id="start"></a> -->
