Dodawanie i usuwanie tekstów Designer, Developer, Creator na Start

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
                     <div class="logo"><img src="./icon/logo_white.png" alt=""></div>
                     <h1 class="name">Kamil Tomala</h1>
-                    <span class="neon1">W</span><span class="neon2">eb Developer</span>        
+                    <span class="neon1">W</span><span class="neon2">eb</span>  
+                    <span class="txt-change neon3" data-weit="3000" data-words='["Developer", "Designer", "Creator"]'></span>    
                     
                 </div>
                 
