Dodanie treści do footer'a

--- a/index.html
+++ b/index.html
@@ -209,7 +209,11 @@
             </section>
         </main>
         <footer>
-            <div id="site-footer"><h1>FOOTER</h1></div>
+            <div id="site-footer">
+                <div class="copyright">
+                    <span>&copy; Copyright 2018 Kamil Tomala</span>
+                </div>
+            </div>
         </footer>
         <script src="./main.js"></script>
     </body>
