--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
 
         <header class="header">
-                <div class="header-logo"><img src="./icon/logo_white.png" alt=""></div>
+                <div class="header-logo"><img src="./icon/logo_white.png" alt=""><span>Kamil Tomala</span></div>
 
                 <nav class="navbar">
                     <ul class="navbar-contener">
