--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
 
         <header class="header">
-                <div class="header-logo"><img src="./icon/logo_white.png" alt=""><span>Kamil Tomala</span></div>
+                <div class="logo"><img src="./icon/logo_white.png" alt="" class="logo-img"><span class="logo-text">Kamil Tomala</span></div>
 
                 <nav class="navbar">
                     <ul class="navbar-contener">
@@ -74,7 +74,7 @@
                 
             </section>
             <!-- SECTION ABOUT -->
-            <section id="about" class="section-about">
+            <section id="about" class="section-about padding-top-big">
                 <!-- <a class="anchor" id="about"></a> -->
                 <div class="section-contener">
 
@@ -104,7 +104,7 @@
                 
             </section>
             <!-- SECTION CERTYFIKATY -->
-            <section id="certyfikaty" class="section-certyfikaty">
+            <section id="certyfikaty" class="section-certyfikaty padding-top-big">
                 <!-- <a class="anchor" id="certyfikaty"></a> -->
 
                 <div class="section-contener">
@@ -170,7 +170,7 @@
 
             </section>
             <!-- SECTION CV -->
-            <section id="cv" class="section-cv">
+            <section id="cv" class="section-cv padding-top-big">
 
                 <div class="section-contener">
 
@@ -210,7 +210,7 @@
 
             </section>
             <!-- SECTION CONTACT -->
-            <section id="contact" class="section-contact">
+            <section id="contact" class="section-contact padding-top-big">
 
                 <div class="section-contener">
 
