Added html picture and changed picture size in section about

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
     
                         <div class="row-left">
                             <div class="section-about_photo">
-                                <img src="/picture/about.jpg" alt="Kamil Tomala Photo">
+                                <picture>
+                                    <source srcset="picture/about_small.jpg 1x, picture/albout_large.jpg 2x" media="(max-width: 37.5rem)">
+                                    <img srcset="picture/about_small.jpg 1x, picture/albout_large.jpg 2x" alt="Full image">
+                                </picture>
                             </div> 
                         </div>
                       
