--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                         <div class="row-left">
                             <div class="section-about_photo">
                                 <picture>
-                                    <source srcset="picture/about_small.jpg 1x, picture/albout_large.jpg 2x" media="(max-width: 37.5rem)">
-                                    <img srcset="picture/about_small.jpg 1x, picture/albout_large.jpg 2x" alt="Full image">
+                                    <source srcset="./picture/about_small.jpg 1x, ./picture/about_large.jpg 2x" media="(max-width: 37.5rem)">
+                                    <img srcset="./picture/about_small.jpg 1x, ./picture/about_large.jpg 2x" alt="Full image">
                                 </picture>
                             </div> 
                         </div>
