Added class header section and add background color

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <!-- <a class="anchor" id="about"></a> -->
                 <div class="section-contener">
 
-                    <div class="u-center-text">
+                    <div class="section-header u-center-text">
                         <div class="bg-color">
                             <h2 class="heading-secondary">Poznajmy się</h2>
                         </div>
@@ -109,7 +109,7 @@
 
                 <div class="section-contener">
 
-                    <div class="u-center-text">
+                    <div class="section-header u-center-text">
                         <div class="bg-color">
                             <h2 class="heading-secondary">Certyfikaty</h2>
                         </div>
@@ -174,7 +174,7 @@
 
                 <div class="section-contener">
 
-                    <div class="u-center-text">
+                    <div class="section-header u-center-text">
                         <div class="bg-color">
                             <h2 class="heading-secondary">CV</h2>
                         </div>
@@ -214,7 +214,7 @@
 
                 <div class="section-contener">
 
-                    <div class="u-center-text">
+                    <div class="section-header u-center-text">
                         <div class="bg-color">
                             <h2 class="heading-secondary">Kontakt</h2>
                         </div>
