Burger menu on phone screen

--- a/index.html
+++ b/index.html
@@ -42,8 +42,26 @@
                         <li class="navbar-items left-underline">
                             <a href="#contact" class="scroller" data-offset="0">Kontakt</a>
                         </li>
-                    </ul>
+                    </ul>                    
                 </nav>
+                <!-- burger menu -->
+                <div id="toggle" class="button_container">
+                    <span class="top"></span>
+                    <span class="middle"></span>
+                    <span class="bottom"></span>
+                </div>
+                
+                <div id="overlay" class="overlay">
+                    <nav class="overlay-menu">
+                        <ul>
+                            <li><a href="#start" class="a-burger" data-offset="0">Start</a></li>
+                            <li><a href="#about" class="a-burger" data-offset="0">O mnie</a></li></li>
+                            <li><a href="#certyfikaty" class="a-burger" data-offset="0">Certyfikaty</a></li>
+                            <li><a href="#cv" class="a-burger" data-offset="0">CV</a></li>
+                            <li><a href="#contact" class="a-burger" data-offset="0">Kontakt</a></li>
+                        </ul>
+                    </nav>
+                </div>
                 
         </header>
 
