Clicked logo jumps to the start section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
 
         <header class="header">
-                <div class="logo"><img src="./icon/logo_white.png" alt="" class="logo-img"><span class="logo-text">Kamil Tomala</span></div>
+                <a href="#start"><div class="logo"><img src="./icon/logo_white.png" alt="" class="logo-img"><span class="logo-text">Kamil Tomala</span></div></a>
 
                 <nav class="navbar">
                     <ul class="navbar-contener">
@@ -50,7 +50,7 @@
                     <span class="middle"></span>
                     <span class="bottom"></span>
                 </div>
-                
+
                 <div id="overlay" class="overlay">
                     <nav class="overlay-menu">
                         <ul>
