--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 
                 <div class="welcome-text">
 
-                    <h1 class="name">Kamil Tomala</h1>
-                    <span>Web</span>  
+                    <span class="name">Kamil</span>
+                    <span class="surname">Tomala</span>
+                    <span>Web</span>
                     <span class="txt-change" data-weit="3000" data-words='["Developer", "Designer", "Creator"]'></span>    
                     
                 </div>
