--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="sass/main.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+        <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
+
+        <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <!-- <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script> -->
@@ -24,7 +27,19 @@
 
         <header class="header">
 
-                <nav class="navbar">
+            <nav class="navigation">
+                <a href="#start" class="scroller navigation__icon active" data-offset="0">
+                    <i class="icon ion-md-home" href="#start"></i>
+                </a>
+                <a href="#about" class="scroller navigation__icon" data-offset="0">
+                    <i class="icon ion-md-contact"></i>
+                </a>
+                <a href="#contact" class="scroller navigation__icon" data-offset="0">
+                    <i class="icon ion-md-mail"></i>
+                </a>
+            </nav>
+
+                <!-- <nav class="navbar">
                     <ul class="navbar__list">
                         <li class="navbar__list--items">
                             <a href="#start" class="scroller" data-offset="0">Start</a>
@@ -37,11 +52,11 @@
                         <!-- <li class="navbar__items">
                             <a href="#cv" class="scroller" data-offset="0">CV</a>
                         </li> -->
-                        <li class="navbar__list--items">
+                        <!-- <li class="navbar__list--items">
                             <a href="#contact" class="scroller" data-offset="0">Kontakt</a>
                         </li>
                     </ul>                    
-                </nav>
+                </nav> -->
                 
                 <!-- burger menu - małe ekrany -->
                 <div id="toggle" class="button_container">
