--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="sass/main.css">
-
-        <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
-
         <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <!-- <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script> -->
 
         <title>Kamil Tomala</title>
     </head>
@@ -27,26 +22,27 @@
 
         <header class="header">
 
-                <!-- <nav class="navbar">
+                <nav class="navbar">
                     <ul class="navbar__list">
                         <li class="navbar__list--items">
                             <a href="#start" class="scroller" data-offset="0">Start</a>
                         </li>
                         <li class="navbar__list--items">
-                            <a href="#about" class="scroller" data-offset="0">O mnie</a></li>
+                            <a href="#about" class="scroller" data-offset="0">O mnie</a>
+                        </li>
+                        <!-- TODO: To be added leater -->
                         <!-- <li class="navbar__items">
                             <a href="#certyfikaty" class="scroller" data-offset="0">Certyfikaty</a>
-                        </li> -->
-                        <!-- <li class="navbar__items">
+                        </li>
+                        <li class="navbar__items">
                             <a href="#cv" class="scroller" data-offset="0">CV</a>
                         </li> -->
-                        <!-- <li class="navbar__list--items">
+                        <li class="navbar__list--items">
                             <a href="#contact" class="scroller" data-offset="0">Kontakt</a>
                         </li>
                     </ul>                    
-                </nav> -->
+                </nav>
                 
-                <!-- burger menu - małe ekrany -->
                 <div id="toggle" class="button_container">
                     <span class="top"></span>
                     <span class="middle"></span>
