Change class name + add border-radius

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <main>
             
             <section id="start" class="section__start">
-                <div class="welcome-text">
+                <div class="section__start--text">
                     <span class="name">Kamil</span>
                     <span class="surname">Tomala</span>
                     <span class="web-dev-text">Web Developer</span>                    
                 </div>
-                <div class="start--photo">
-                    <img src="picture/about_large.jpg" alt="Image">
+                <div class="section__start--photo">
+                    <img src="./../../picture/me_small.jpg" alt="Image">
                 </div>
             </section>
                 
