Add section technology

--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
                     <img src="./../../picture/me_small.jpg" alt="Image">
                 </div>
             </section>
+
+            <section class="section__technology-learned">
+                <div class="contener">
+                    <div class="heading-small">Poznane technologie:</div>
+                    <div class="technology-learned--box">
+                        <img class="technology-learned--logo" src="/picture/technology/JS_logo.png" alt="HTML_CSS3_JS__logo"/>
+                        <img class="technology-learned--logo" src="/picture/technology/Angular_logo.png" alt="Angular__logo"/>
+                        <img class="technology-learned--logo" src="/picture/technology/TypeScript_logo.png" alt="TypeScript__logo"/>
+                        <img class="technology-learned--logo" src="/picture/technology/git__logo.png" alt="git__logo"/>
+                        <img class="technology-learned--logo" src="/picture/technology/NodeJS_logo.png" alt="NodeJS__logo"/>
+                        <img class="technology-learned--logo" src="/picture/technology/npm__logo.png" alt="npm__logo"/>
+                    </div>
+                </div>
+            </section>
+
                 
             <section id="about" class="section__about">                    
                 <div class="about__container">                     
@@ -86,22 +101,6 @@
             <section id="contact" class="section__contact">                    
                 <h2>Kontakt</h2>
             </section>
-
-            <!-- SECTION TECHNOLOGY-LEARNED -->
-            <!-- <section class="section__technology-learned">
-                <div class="contener">
-                    <div class="heading-small">Poznane technologie:</div>
-                    <div class="technology-learned--box">
-                        <img class="technology-learned--logo" src="/picture/technology/JS_logo.png" alt="HTML_CSS3_JS__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/Angular_logo.png" alt="Angular__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/TypeScript_logo.png" alt="TypeScript__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/git__logo.png" alt="git__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/NodeJS_logo.png" alt="NodeJS__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/npm__logo.png" alt="npm__logo"/>
-                    </div>
-                </div>
-            </section> -->
-            <!-- SECTION CERTYFIKATY -->
             
             <!-- <section id="certyfikaty" class="section__certyfikaty padding-top-big"> -->
                 <!-- <a class="anchor" id="certyfikaty"></a>
