--- a/index.html
+++ b/index.html
@@ -75,17 +75,13 @@
                 </div>
             </section>
 
-            <section class="section__technology-learned">
-                <div class="contener">
-                    <div class="heading-small">Poznane technologie:</div>
-                    <div class="technology-learned--box">
-                        <img class="technology-learned--logo" src="/picture/technology/JS_logo.png" alt="HTML_CSS3_JS__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/Angular_logo.png" alt="Angular__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/TypeScript_logo.png" alt="TypeScript__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/git__logo.png" alt="git__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/NodeJS_logo.png" alt="NodeJS__logo"/>
-                        <img class="technology-learned--logo" src="/picture/technology/npm__logo.png" alt="npm__logo"/>
-                    </div>
+            <section class="section__technology">
+                <div class="heading-small">Poznane technologie</div>
+                <div class="section__technology--container">
+                   <div class="icon-box">HTML</div>
+                   <div class="icon-box">CSS</div>
+                   <div class="icon-box">JS</div>
+                   <div class="icon-box">Angular</div>
                 </div>
             </section>
 
