--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="sass/main.css">
         <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
+        <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
         <title>Kamil Tomala</title>
     </head>
 
@@ -78,8 +78,7 @@
             <section class="section__technology">
                 <div class="heading-small">Poznane technologie</div>
                 <div class="section__technology--container">
-                   <div class="icon-box">HTML</div>
-                   <div class="icon-box">CSS</div>
+                   <div class="icon-box"><ion-icon name="logo-html5"></ion-icon></div>
                    <div class="icon-box">JS</div>
                    <div class="icon-box">Angular</div>
                 </div>
