Add icon details

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
             <section class="section__technology">
                 <div class="heading-small">Poznane technologie</div>
                 <div class="section__technology--container">
-                   <div class="icon-box"><ion-icon name="logo-html5"></ion-icon></div>
+                   <div class="icon-box">
+                       <ion-icon name="logo-html5"></ion-icon>
+                       <div class="icon-details">HTML5</div>
+                    </div>
                    <div class="icon-box">JS</div>
                    <div class="icon-box">Angular</div>
                 </div>
