Correction individual section height

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             <section class="section__technology">
                 <div class="heading-small">Poznane technologie</div>
                 <div class="section__technology--container">
-                   <div class="icon-box">
-                       <ion-icon name="logo-html5"></ion-icon>
-                       <div class="icon-details">HTML5</div>
+                    <div class="icon-box">
+                        <ion-icon name="logo-html5"></ion-icon>
+                        <div class="icon-details">HTML5</div>
                     </div>
-                   <div class="icon-box">JS</div>
-                   <div class="icon-box">Angular</div>
+                    <div class="icon-box">JS</div>
+                    <div class="icon-box">Angular</div>
                 </div>
             </section>
 
@@ -96,8 +96,10 @@
                 </div>
             </section>
                 
-            <section id="contact" class="section__contact">                    
-                <h2>Kontakt</h2>
+            <section id="contact" class="section__contact">  
+                <div>
+                    <h2>Kontakt</h2>
+                </div>                  
             </section>
             
             <!-- <section id="certyfikaty" class="section__certyfikaty padding-top-big"> -->
