--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                 </div>
             </section>
                 
-            <section id="contact" class="section__contact">  
+            <!-- <section id="contact" class="section__contact">  
                 <div>
                     <h2>Kontakt</h2>
                 </div>                  
-            </section>
+            </section> -->
             
             <!-- <section id="certyfikaty" class="section__certyfikaty padding-top-big"> -->
                 <!-- <a class="anchor" id="certyfikaty"></a>
