Change icon in icon-details and add technology

--- a/index.html
+++ b/index.html
@@ -80,19 +80,31 @@
                 <div class="section__technology--container">
                     <div class="icon-box">
                         <ion-icon name="logo-html5"></ion-icon>
-                        <div class="icon-details">HTML5</div>
+                        <div class="icon-details">
+                            <span>HTML5</span>
+                        </div>
                     </div>
                     <div class="icon-box">
-                        <ion-icon name="logo-html5"></ion-icon>
-                        <div class="icon-details">HTML5</div>
+                        <ion-icon name="logo-css3"></ion-icon>
+                        <div class="icon-details">
+                            <span>CSS3</span>
+                            <span>SASS/SCSS</span>
+                            <span>Bootstrap</span>
+                        </div>
                     </div>
                     <div class="icon-box">
-                        <ion-icon name="logo-html5"></ion-icon>
-                        <div class="icon-details">HTML5</div>
+                        <ion-icon name="logo-nodejs"></ion-icon>
+                        <div class="icon-details">
+                            <span>JavaScript (ES6)</span>
+                            <span>jQuery</span>
+                            <span>TypeScript</span>
+                        </div>
                     </div>
                     <div class="icon-box">
-                        <ion-icon name="logo-html5"></ion-icon>
-                        <div class="icon-details">HTML5</div>
+                        <ion-icon name="logo-angular"></ion-icon>
+                        <div class="icon-details">
+                            <span>Angular</span>
+                        </div>
                     </div>
                 </div>
             </section>
