Add box-shadow to heading-small and padding

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </section>
 
             <section class="section__technology">
-                <div class="heading-small">Poznane technologie</div>
+                <div class="heading-small">
+                    <span>Poznane technologie</span>
+                </div>
                 <div class="section__technology--container">
                     <div class="icon-box">
                         <ion-icon name="logo-html5"></ion-icon>
