Add class main to main tag

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
         </header>
 
-        <main>
+        <main class="main">
             
             <section id="start" class="section__start">
                 <div class="section__start--text">
