Add anotheradded a new skill

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
                             <span>Angular</span>
                         </div>
                     </div>
+                    <div class="icon-box">
+                        <i class="fab fa-react"></i>
+                        <div class="icon-details">
+                            <span>React</span>
+                        </div>
+                    </div>
                 </div>
             </section>
                 
